style: update testimonial section alignment and padding fix: adjust button padding and set max-width in inside bottle section

--- a/assets/section-testimonial.css
+++ b/assets/section-testimonial.css
@@ -78,8 +78,9 @@
   font-size: 18px;
   line-height: 165%;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
+  padding-left: 56px;
 }
 .main-container-text-testimonialSwiper {
   padding: 80px 0 50px;
@@ -94,7 +95,8 @@
   font-size: 20px;
   line-height: 165%;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
+  padding-left: 56px;
 }
 .title-testimonialSwiper {
   font-family: Roundo, Arial, sans-serif;
@@ -103,7 +105,8 @@
   color: #090909cc;
   line-height: 165%;
   letter-spacing: 0;
-  text-align: center;
+  text-align: left;
+  padding-left: 56px;
 }
 .container-testimonialSwiper {
   position: relative;
@@ -185,6 +188,8 @@
     font-size: 18px;
     line-height: 165%;
     letter-spacing: 0%;
+    text-align: center;
+    padding-left: 0;
   }
   .section-testimonial .swiper-slide {
     flex-direction: column;
